Apply suggestion from @neon-dev
Co-authored-by: Neon <neon@beyond-aion.com>